--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/CodeNinja" # the subpath of your site, e.g. /blog
 url: "https://ahmedsharifkhan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
+
 twitter_username: ahmedsharifkhannoor
 github_username:  ahmedsharifkhannoor
 
