--- a/_config.yml
+++ b/_config.yml
@@ -17,20 +17,28 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+author: Ahmed Sharif Khan Noor
+start_year: 2023
+current_year: {{ site.time | date: "%Y" }}
 
-# title: Your awesome title
-# email: your-email@example.com
-# description: >- # this means to ignore newlines until "baseurl:"
-#   Write an awesome description for your new site here. You can edit this
-#   line in _config.yml. It will appear in your document head meta (for
-#   Google search results) and in your feed.xml site description.
+title: CodeNinja
+email: myemail@gmail.com
+number: 0123 345 6789
+address: New York, NY 10012, US
+description: >- # this means to ignore newlines until "baseurl:"
+   Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 baseurl: "/CodeNinja" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ahmedsharifkhan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: /:categories/:year/:month/:day/:title
 
-# twitter_username: jekyllrb
-# github_username:  jekyll
+facebook_username: https://www.facebook.com/ahmedsharifkhannoor
+twitter_username: https://www.twitter.com/maxnoor87
+instagram_username: https://www.instagram.com/ahmedsharifkhannoor
+linkedin_username: https://www.linkedin.com/ahmedsharifkhannoor
+github_username: https://www.github.com/ahmedsharifkhannoor
+youtube_username: https://www.youtube.com/channel/UCBfIS1RdIpSoS1e75LXJuxw
+
 
 # Build settings
 theme: minima
