--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,10 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+
+
+ # This will require each of these gems automatically.
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
