--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,9 @@ facebook_username: https://www.facebook.com/ahmedsharifkhannoor
 twitter_username: https://www.twitter.com/maxnoor87
 instagram_username: https://www.instagram.com/ahmedsharifkhannoor
 linkedin_username: https://www.linkedin.com/in/ahmedsharifkhannoor
-github_username: https://www.github.com/ahmedsharifkhannoor
+github_username: https://www.github.com/ahmedsharifkhan
 youtube_username: https://www.youtube.com/channel/UCBfIS1RdIpSoS1e75LXJuxw
+
 
 
 # _config.yml
@@ -42,12 +43,12 @@ collections:
 header_pages:
   - title: Home
     url: /
+  - title: Blog
+    url: /blog
   - title: About
     url: /about
   - title: Contact
     url: /contact
-  - title: Authors
-    url: /authors
 
 
 
