--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,8 @@ header_pages:
     url: /contact
   - title: Resume
     url: /resume
+  - title: CV
+    url: /cv
 
 # Build settings
 theme: minima
@@ -55,6 +57,12 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-admin
+
+sass:
+  sass_dir: _sass
+  style: compressed
+
+theme_skin: blue
 
   # This will require each of these gems automatically.
 # Exclude from processing.
